--- a/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
+++ b/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
@@ -210,4 +210,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\src\win\wgnuplot.mnu">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
