--- a/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
+++ b/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClCompile Include="..\..\..\..\src\standard.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\win\wd2d.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\config.h">
