Add build documentation.

--- a/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj
+++ b/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="..\config.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\..\..\README.md" />
     <None Include="..\..\..\..\src\win\wgnuplot.mnu">
       <DeploymentContent>true</DeploymentContent>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
