--- a/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
+++ b/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
@@ -217,5 +217,6 @@
     <None Include="..\..\..\..\src\win\wgnuplot.mnu">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\..\..\..\README.md" />
   </ItemGroup>
 </Project>
