Add AppVeyor integration. Use static linkage.
# Conflicts:
#	appveyor.yml
#	config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ share/Gnuplot
 /config/msvc/gnuplot/wgnuplot/Debug
 .vs
 /config/msvc/gnuplot/Debug
+/config/msvc/gnuplot/x64
+/config/msvc/gnuplot/wgnuplot/x64
+/config/msvc/gnuplot/Release
+/config/msvc/gnuplot/wgnuplot/Release
