--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,26 +5,41 @@ branches:
   - dev
 image: Visual Studio 2017
 install:
-  - IF NOT EXIST vcpkg git clone https://github.com/Microsoft/vcpkg  
+  - IF NOT EXIST vcpkg git clone --depth 1 https://github.com/Microsoft/vcpkg  
   - cd vcpkg
-  - git pull
+  - git fetch --depth=1
+  - git reset --hard origin/master
   - powershell -exec bypass scripts\bootstrap.ps1
   - vcpkg.exe remove --outdated --recurse
   - vcpkg install zlib:%PLATFORM%-windows-static
-  - vcpkg install bzip2:%PLATFORM%-windows-static
+  - vcpkg install pcre:%PLATFORM%-windows-static
+  - vcpkg install libffi:%PLATFORM%-windows-static
+  - vcpkg install gettext:%PLATFORM%-windows-static
+  - vcpkg install libiconv:%PLATFORM%-windows-static
+  - vcpkg install glib:%PLATFORM%-windows-static
   - vcpkg install libpng:%PLATFORM%-windows-static
+  - vcpkg install pixman:%PLATFORM%-windows-static
+  - vcpkg install bzip2:%PLATFORM%-windows-static
   - vcpkg install freetype:%PLATFORM%-windows-static
+  - vcpkg install expat:%PLATFORM%-windows-static
+  - vcpkg install fontconfig:%PLATFORM%-windows-static
+  - vcpkg install cairo:%PLATFORM%-windows-static
+  - vcpkg install harfbuzz:%PLATFORM%-windows-static
+######
+  - vcpkg install pango:%PLATFORM%-windows-static
+######
   - vcpkg install libjpeg-turbo:%PLATFORM%-windows-static
   - vcpkg install libwebp:%PLATFORM%-windows-static
   - vcpkg install liblzma:%PLATFORM%-windows-static
-  - vcpkg install freeglut:%PLATFORM%-windows-static
   - vcpkg install tiff:%PLATFORM%-windows-static
-  - vcpkg install expat:%PLATFORM%-windows-static
-  - vcpkg install libiconv:%PLATFORM%-windows-static
-  - vcpkg install fontconfig:%PLATFORM%-windows-static
+######
   - vcpkg install libgd:%PLATFORM%-windows-static
-  - vcpkg update
+  - vcpkg install wxwidgets:%PLATFORM%-windows-static
+######
   - vcpkg integrate install
+  - IF EXIST buildtrees rmdir /s /q buildtrees
+  - IF EXIST downloads rmdir /s /q downloads
+  - IF EXIST packages rmdir /s /q packages
   - cd ..
 cache:
   - vcpkg
