--- a/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
+++ b/config/msvc/gnuplot/wgnuplot/wgnuplot.vcxproj.filters
@@ -207,6 +207,15 @@
     <ClCompile Include="..\..\..\..\src\win\wd2d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\wxterminal\wxt_gui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\wxterminal\gp_cairo.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\wxterminal\gp_cairo_helpers.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\config.h">
